docs: CLAUDE.md 전체 모듈 Kotlin 마이그레이션 반영
Java 25 → Kotlin 2.3.20, Spring Boot 3.4.13 → 4.0.5,
JPA/QueryDSL → Exposed 1.0.0 전환에 맞춰 7개 CLAUDE.md를 갱신한다.

주요 변경:
- 루트: Overview, Code Conventions를 Kotlin 기준으로 전면 개정
- 루트: auth → iam 모듈명 수정, Module Map 갱신
- common: Enum/Entity 코드 예시를 Kotlin으로 전환, JPA → Exposed 반영
- common: ThreadPoolConfig 함수명(getIoBoundExecutor), 예외 생성자 패턴 갱신
- auth-contract: record → data class, tryParseClaims nullable 반환 반영
- auth-contract: ReentrantLock, S2S 토큰 캐싱 상세 추가
- gateway: X-User-* 헤더 목록 테이블 추가, GlobalFilter 명시
- iam: 패키지 구조 갱신 (RoleResolutionService 추가), API 목록 상세화
- reservation: Facade 패턴, S2S 재검증, Exposed DAO 반영
- stop: .java → .kt 참조 수정, SeoulBusApiClient 생성자 주입 반영

Confidence: high
Scope-risk: narrow

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>